# ocaml-website-template

./: LICENSE  Makefile  README.md  dune  dune-project  ocaml-website-template.opam  tailwind.config.js
data/: jobs.yml
data/blog/: entry-2.md
src/data/: data.ml  data.mli  dune
src/global/: dune  url.ml
src/static_files/: dune  static_files.ml
src/templates/: dune  templates.ml  url.ml
src/templates/components/: header.eml
src/templates/layouts/: layout.eml
src/templates/pages/: blog.eml  blog_post.eml  home.eml  jobs.eml
src/web_server/lib/: config.ml  dune  handler.ml  router.ml  static.ml  web_server.ml
tool/ood-gen/lib/: blog.ml  dune  utils.ml
