(library
 (name static_files)
 (libraries fmt dream))

(rule
 (target asset.ml)
 (deps
  %{workspace_root}/asset/css/main.css
  (source_tree %{workspace_root}/asset))
 (action
  (with-stdout-to
   %{null}
   (run %{bin:ocaml-crunch} -m plain %{workspace_root}/asset -o %{target}))))

(rule
 (target media.ml)
 (deps
  (source_tree %{workspace_root}/data/media))
 (action
  (with-stdout-to
   %{null}
   (run
    %{bin:ocaml-crunch}
    -m
    plain
    %{workspace_root}/data/media
    -o
    %{target}))))
